--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,5 +4,10 @@
         "message": "The {{page}} page you are looking for does not exist",
         "redirect": "Redirecting in",
         "button": "Go back to home page"
+    },
+    "group": {
+        "create-group": {
+            "title": "Create a group"
+        }
     }
 }
